<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.tvorigora.mvp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_master"
        android:name="ru.tvorigora.mvp.ui.master.MasterFragment"
        android:label="@string/menu_master"
        tools:layout="@layout/fragment_master"/>

    <fragment
        android:id="@+id/nav_course"
        android:name="ru.tvorigora.mvp.ui.course.CourseFragment"
        android:label="@string/menu_course"
        tools:layout="@layout/fragment_course"/>

    <fragment
        android:id="@+id/nav_my_courses"
        android:name="ru.tvorigora.mvp.ui.course.MyCoursesFragment"
        android:label="@string/menu_my_courses"
        tools:layout="@layout/fragment_my_course"/>

</navigation>