<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/course_registration_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.course.CourseRegistration">

    <TextView
        android:id="@+id/course_registration_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:padding="16dp"
        android:text="@string/course_registration_selection_caption"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/course_registration_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="Выбранный курс..."
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintTop_toBottomOf="@+id/course_registration_selection" />

    <TextView
        android:id="@+id/course_registration_child_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/course_registration_child_caption"
        app:layout_constraintTop_toBottomOf="@+id/course_registration_caption" />

    <EditText
        android:id="@+id/course_registration_child_fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Введите ФИО"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/course_registration_child_caption" />

    <Button
        android:id="@+id/course_registration_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/course_registration_button_caption"
        app:layout_constraintTop_toBottomOf="@+id/course_registration_child_fullName"/>



</androidx.constraintlayout.widget.ConstraintLayout>